<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/search_bg">

    <View
        android:id="@+id/pip"
        android:layout_width="38dp"
        android:layout_height="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/pip_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvSearch"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_margin="25dp"
        app:cardBackgroundColor="@color/colorGrey3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pip"
        app:strokeWidth="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/ivPlane"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="10dp"
                android:importantForAccessibility="no"
                android:src="@drawable/fly_plane_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/etWhereInput" />

            <EditText
                android:id="@+id/etWhereInput"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:digits="абвгдеёжзийклмнопрстуфхцчшщъыьэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ"
                android:hint="@string/stringHintWhere"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text|textImeMultiLine"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/colorGrey6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivPlane"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/separator"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginHorizontal="10dp"
                android:background="@color/colorGrey4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/ivPlane"
                app:layout_constraintTop_toBottomOf="@id/etWhereInput" />

            <ImageView
                android:id="@+id/ivSearch"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="10dp"
                android:importantForAccessibility="no"
                android:src="@drawable/white_search_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separator" />

            <EditText
                android:id="@+id/etToInput"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:digits="абвгдеёжзийклмнопрстуфхцчшщъыьэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ"
                android:hint="@string/stringHintTo"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textImeMultiLine"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/colorGrey6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivSearch"
                app:layout_constraintTop_toBottomOf="@id/separator" />


            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="5dp"
                android:importantForAccessibility="no"
                android:src="@drawable/close_icon"
                app:layout_constraintBottom_toBottomOf="@id/etToInput"
                app:layout_constraintEnd_toEndOf="@id/etToInput"
                app:layout_constraintTop_toTopOf="@id/etToInput" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvHardRoute"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/colorGreen"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toStartOf="@id/cvAnywhere"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvSearch"
        app:strokeWidth="0dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:importantForAccessibility="no"
            android:src="@drawable/hard_route_icon" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvHardRoute"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/stringHardRoute"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/cvHardRoute"
        app:layout_constraintStart_toStartOf="@id/cvHardRoute"
        app:layout_constraintTop_toBottomOf="@id/cvHardRoute" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvAnywhere"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/colorBlue"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toStartOf="@id/cvWeekend"
        app:layout_constraintStart_toEndOf="@id/cvHardRoute"
        app:layout_constraintTop_toBottomOf="@id/cvSearch"
        app:strokeWidth="0dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:importantForAccessibility="no"
            android:src="@drawable/anywhere_icon" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/stringAnywhere"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/cvAnywhere"
        app:layout_constraintStart_toStartOf="@id/cvAnywhere"
        app:layout_constraintTop_toBottomOf="@id/cvAnywhere" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvWeekend"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/colorDarkBlue"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toStartOf="@id/cvHotTickets"
        app:layout_constraintStart_toEndOf="@id/cvAnywhere"
        app:layout_constraintTop_toBottomOf="@id/cvSearch"
        app:strokeWidth="0dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:importantForAccessibility="no"
            android:src="@drawable/weekend_icon" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/stringWeekend"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/cvWeekend"
        app:layout_constraintStart_toStartOf="@id/cvWeekend"
        app:layout_constraintTop_toBottomOf="@id/cvWeekend" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvHotTickets"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/colorRed"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cvWeekend"
        app:layout_constraintTop_toBottomOf="@id/cvSearch"
        app:strokeWidth="0dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:importantForAccessibility="no"
            android:src="@drawable/hot_icon" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/stringHotTickets"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/cvHotTickets"
        app:layout_constraintStart_toStartOf="@id/cvHotTickets"
        app:layout_constraintTop_toBottomOf="@id/cvHotTickets" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvPopular"
        android:layout_width="0dp"
        android:layout_height="215dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="35dp"
        app:cardBackgroundColor="@color/colorGrey3"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHardRoute"
        app:strokeWidth="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clIstanbul"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/clSochi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivIstanbul"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/istanbul"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvIstanbul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/stringIstanbul"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/ivIstanbul"
                    app:layout_constraintTop_toTopOf="@id/ivIstanbul" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stringPopularDestination"
                    android:textColor="@color/colorGrey5"
                    app:layout_constraintBottom_toBottomOf="@id/ivIstanbul"
                    app:layout_constraintStart_toStartOf="@id/tvIstanbul" />

                <View
                    android:id="@+id/separator1"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/colorGrey5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/ivIstanbul"
                    app:layout_constraintTop_toBottomOf="@id/ivIstanbul" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clSochi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/clIstanbul">

                <ImageView
                    android:id="@+id/ivSochi"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/sochi"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvSochi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/stringSochi"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/ivSochi"
                    app:layout_constraintTop_toTopOf="@id/ivSochi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stringPopularDestination"
                    android:textColor="@color/colorGrey5"
                    app:layout_constraintBottom_toBottomOf="@id/ivSochi"
                    app:layout_constraintStart_toStartOf="@id/tvSochi" />

                <View
                    android:id="@+id/separator2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/colorGrey5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/ivSochi"
                    app:layout_constraintTop_toBottomOf="@id/ivSochi" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clPhuket"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/clSochi">

                <ImageView
                    android:id="@+id/ivPhuket"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/phuket"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvPhuket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/stringPhuket"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/ivPhuket"
                    app:layout_constraintTop_toTopOf="@id/ivPhuket" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stringPopularDestination"
                    android:textColor="@color/colorGrey5"
                    app:layout_constraintBottom_toBottomOf="@id/ivPhuket"
                    app:layout_constraintStart_toStartOf="@id/tvPhuket" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/colorGrey5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/ivPhuket"
                    app:layout_constraintTop_toBottomOf="@id/ivPhuket" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <View
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvPopular" />
</androidx.constraintlayout.widget.ConstraintLayout>